Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjBoolObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(true)
        Test(v)
    end

    action Test(Text var)
    end
end
